<resources>
    <string name="app_name">C196_Greg_Westmoreland</string>
    <string name="enter">Enter</string>
    <string name="add_a_new_term">Add A New Term</string>
    <string name="term_name">Term Name</string>
    <string name="start_date">Term Start Date</string>
    <string name="end_date">Term End Date</string>
    <string name="save_term">Save Term</string>
    <string name="save_new_term">save_new_term</string>
    <string name="termDate">termDate</string>
    <string name="add_course">Add Course</string>
    <string name="enter_scheduler">Enter Scheduler</string>
    <string name="date_picker">datePicker</string>
    <string name="channel_name">channel_name</string>
    <string name="channel_description">channel_description</string>
    <string name="add_a_new_term_plus_button">Add A New Term Plus Button</string>
    <string name="add_a_new_course">Add A New Course</string>
    <string name="add_a_new_assessment">Add A New Assessment</string>
    <string name="add_a_new_assessment_plus_button">add_assessment_button</string>
    <string name="add_a_new_course_plus_button">add_course_plus_button</string>
    <string name="course_name">Course_Name</string>
    <string name="save_course">Save Course</string>
    <string name="course_status">Course_Status</string>
    <string name="course_instructor_name">Course_Instructor_Name</string>
    <string name="course_instructor_phone">Course Instructor Name</string>
    <string name="course_instructor_email">Course Instructor Email</string>
    <string name="see_all_terms">SEE ALL TERMS</string>
</resources>