<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    tools:context=".All.UI.Courses.Courses_Add_New_Course">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/course_name"/>
                <EditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="Math, English, etc"
                    android:id="@+id/Course_Name"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/start_date"/>
                <EditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="MM/DD/YYYY"
                    android:id="@+id/Start_Date"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/end_date"/>
                <EditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="MM/DD/YYYY"
                    android:id="@+id/End_Date"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/course_status"/>
                <EditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="In Progress, Completed"
                    android:id="@+id/Course_status"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/course_instructor_name"/>
                <EditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="Mr. John Smith"
                    android:id="@+id/Course_Instructor_Name"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/course_instructor_phone"/>
                <EditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="214-555-1212"
                    android:id="@+id/Course_Instructor_Phone"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/course_instructor_email"/>
                <EditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="instructor_name@wgu.edu"
                    android:id="@+id/Course_Instructor_Email"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:onClick="saveCourse"
                    android:text="@string/save_course" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>